[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/MenuBackground.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/font48pt.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/font22pt.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/font36pt.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=5]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackground" type="Sprite" parent="."]
position = Vector2( 512, 302 )
texture = ExtResource( 1 )

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.5
margin_top = -103.0
margin_right = 174.5
margin_bottom = 103.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MainMenu"]
margin_right = 349.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
text = "SummerGame"

[node name="MainMenuGrid" type="GridContainer" parent="MainMenu"]
margin_left = 100.0
margin_top = 62.0
margin_right = 249.0
margin_bottom = 206.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Singleplayer" type="Button" parent="MainMenu/MainMenuGrid"]
margin_right = 149.0
margin_bottom = 33.0
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 3 )
text = "Singleplayer"

[node name="Mulitplayer" type="Button" parent="MainMenu/MainMenuGrid"]
margin_top = 37.0
margin_right = 149.0
margin_bottom = 70.0
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 3 )
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="MainMenu/MainMenuGrid"]
margin_top = 74.0
margin_right = 149.0
margin_bottom = 107.0
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 3 )
text = "Options"

[node name="Quit" type="Button" parent="MainMenu/MainMenuGrid"]
margin_top = 111.0
margin_right = 149.0
margin_bottom = 144.0
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="LevelSelect" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.0
margin_top = -111.5
margin_right = 154.0
margin_bottom = 111.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="LevelSelect"]
margin_right = 308.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
text = "Level Select"
align = 1

[node name="Level" type="GridContainer" parent="LevelSelect"]
margin_top = 62.0
margin_right = 308.0
margin_bottom = 169.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="Button" parent="LevelSelect/Level"]
margin_right = 96.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "Level 1"

[node name="Level2" type="Button" parent="LevelSelect/Level"]
margin_left = 100.0
margin_right = 196.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "Level 2"

[node name="Level3" type="Button" parent="LevelSelect/Level"]
margin_left = 200.0
margin_right = 296.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "Level 3"

[node name="Level4" type="Button" parent="LevelSelect/Level"]
margin_top = 37.0
margin_right = 96.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 3 )
text = "Level 4"

[node name="Level5" type="Button" parent="LevelSelect/Level"]
margin_left = 100.0
margin_top = 37.0
margin_right = 196.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 3 )
text = "Level 5"

[node name="Level6" type="Button" parent="LevelSelect/Level"]
margin_left = 200.0
margin_top = 37.0
margin_right = 296.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 3 )
text = "Level 6"

[node name="Level7" type="Button" parent="LevelSelect/Level"]
margin_top = 74.0
margin_right = 96.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 3 )
text = "Level 7"

[node name="Level8" type="Button" parent="LevelSelect/Level"]
margin_left = 100.0
margin_top = 74.0
margin_right = 196.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 3 )
text = "Level 8"

[node name="Level9" type="Button" parent="LevelSelect/Level"]
margin_left = 200.0
margin_top = 74.0
margin_right = 296.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 3 )
text = "Level 9"

[node name="Back" type="Button" parent="LevelSelect"]
margin_top = 173.0
margin_right = 308.0
margin_bottom = 223.0
custom_fonts/font = ExtResource( 4 )
text = "Back"

[node name="MultiplayerLobby" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -81.5
margin_right = 125.0
margin_bottom = 81.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="MultiplayerLobby"]
margin_right = 267.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 4 )
text = "Lobby"
align = 1

[node name="GridContainer" type="GridContainer" parent="MultiplayerLobby"]
margin_top = 48.0
margin_right = 267.0
margin_bottom = 126.0
columns = 2

[node name="NameLabel" type="Label" parent="MultiplayerLobby/GridContainer"]
margin_top = 5.0
margin_right = 70.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
text = "Name:"

[node name="NameInput" type="LineEdit" parent="MultiplayerLobby/GridContainer"]
margin_left = 74.0
margin_right = 267.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )

[node name="IPLabel" type="Label" parent="MultiplayerLobby/GridContainer"]
margin_top = 46.0
margin_right = 70.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 3 )
text = "IP:"

[node name="IPInput" type="LineEdit" parent="MultiplayerLobby/GridContainer"]
margin_left = 74.0
margin_top = 41.0
margin_right = 267.0
margin_bottom = 78.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="MultiplayerLobby"]
margin_top = 130.0
margin_right = 267.0
margin_bottom = 163.0
alignment = 1

[node name="Back" type="Button" parent="MultiplayerLobby/HBoxContainer"]
margin_right = 69.0
margin_bottom = 33.0
rect_min_size = Vector2( 69, 33 )
custom_fonts/font = ExtResource( 3 )
text = "Back"

[node name="Connect" type="Button" parent="MultiplayerLobby/HBoxContainer"]
margin_left = 73.0
margin_right = 178.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "Connect"

[node name="Create" type="Button" parent="MultiplayerLobby/HBoxContainer"]
margin_left = 182.0
margin_right = 267.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "Create"
[connection signal="pressed" from="MainMenu/MainMenuGrid/Singleplayer" to="." method="_on_Singleplayer_pressed"]
[connection signal="pressed" from="MainMenu/MainMenuGrid/Mulitplayer" to="." method="_on_Mulitplayer_pressed"]
[connection signal="pressed" from="MainMenu/MainMenuGrid/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="LevelSelect/Back" to="." method="_on_Back_pressed"]
[connection signal="text_changed" from="MultiplayerLobby/GridContainer/NameInput" to="." method="_on_NameInput_text_changed"]
[connection signal="pressed" from="MultiplayerLobby/HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MultiplayerLobby/HBoxContainer/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="MultiplayerLobby/HBoxContainer/Create" to="." method="_on_Create_pressed"]
